rust/surrealdb-orm-tests/tests/snapshots/query_code_block__code_block_with_macro.snap
---
source: surrealdb-orm-tests/tests/query_code_block.rs
expression: created_stats_statement.to_raw()
---
CREATE weapon_stats SET averageStrength = {
LET $strengths = (SELECT VALUE strength FROM weapon);

LET $total = math::sum($strengths);

LET $count = count($strengths);

RETURN ($total / $count);
};
